Add a test for creating a post
