# functional/src/main/java/com/rjtoursim/api/model/GetPostResponse.java
@@ -1,0 +1,159 @@
+package com.rjtoursim.api.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import java.time.OffsetDateTime;
+import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.lang.Nullable;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * GetPostResponse
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-02-16T00:42:11.940841605Z[Europe/London]", comments = "Generator version: 7.13.0")
+public class GetPostResponse {
+
+  private @Nullable String title;
+
+  private @Nullable String description;
+
+  private @Nullable String address;
+
+  @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+  private @Nullable OffsetDateTime datePosted;
+
+  public GetPostResponse title(String title) {
+    this.title = title;
+    return this;
+  }
+
+  /**
+   * Get title
+   * @return title
+   */
+  
+  @Schema(name = "title", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("title")
+  public String getTitle() {
+    return title;
+  }
+
+  public void setTitle(String title) {
+    this.title = title;
+  }
+
+  public GetPostResponse description(String description) {
+    this.description = description;
+    return this;
+  }
+
+  /**
+   * Get description
+   * @return description
+   */
+  
+  @Schema(name = "description", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("description")
+  public String getDescription() {
+    return description;
+  }
+
+  public void setDescription(String description) {
+    this.description = description;
+  }
+
+  public GetPostResponse address(String address) {
+    this.address = address;
+    return this;
+  }
+
+  /**
+   * Get address
+   * @return address
+   */
+  
+  @Schema(name = "address", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("address")
+  public String getAddress() {
+    return address;
+  }
+
+  public void setAddress(String address) {
+    this.address = address;
+  }
+
+  public GetPostResponse datePosted(OffsetDateTime datePosted) {
+    this.datePosted = datePosted;
+    return this;
+  }
+
+  /**
+   * Get datePosted
+   * @return datePosted
+   */
+  @Valid 
+  @Schema(name = "datePosted", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("datePosted")
+  public OffsetDateTime getDatePosted() {
+    return datePosted;
+  }
+
+  public void setDatePosted(OffsetDateTime datePosted) {
+    this.datePosted = datePosted;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    GetPostResponse getPostResponse = (GetPostResponse) o;
+    return Objects.equals(this.title, getPostResponse.title) &&
+        Objects.equals(this.description, getPostResponse.description) &&
+        Objects.equals(this.address, getPostResponse.address) &&
+        Objects.equals(this.datePosted, getPostResponse.datePosted);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(title, description, address, datePosted);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class GetPostResponse {\n");
+    sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    description: ").append(toIndentedString(description)).append("\n");
+    sb.append("    address: ").append(toIndentedString(address)).append("\n");
+    sb.append("    datePosted: ").append(toIndentedString(datePosted)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
